[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-gemini-multi-llm-fallback"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]   # MUST be exactly ["src"] — files go directly under src/

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# tests で mock の入れ子 with を許容 (SIM117 は本体コードのみで強制)
"tests/**" = ["SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
